--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:mon-projet": "node dist/mon-projet/server/server.mjs",
+    "serve:ssr:marie-cecile-artiste-peintre": "node dist/marie-cecile-artiste-peintre/server/server.mjs",
     "lint": "ng lint"
   },
   "private": true,
