--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test",
     "serve:ssr:marie-cecile-artiste-peintre": "node dist/marie-cecile-artiste-peintre/server/server.mjs",
-    "lint": "ng lint"
+    "lint": "nx lint"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.11",
+    "@angular-devkit/core": "^18.2.11",
+    "@angular-devkit/schematics": "^18.2.11",
     "@angular-eslint/builder": "18.4.0",
     "@angular-eslint/eslint-plugin": "18.4.0",
     "@angular-eslint/eslint-plugin-template": "18.4.0",
@@ -38,6 +40,9 @@
     "@angular-eslint/template-parser": "18.4.0",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.11",
+    "@nx/angular": "20.0.12",
+    "@nx/workspace": "20.0.12",
+    "@schematics/angular": "^18.2.11",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -54,6 +59,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "20.0.12",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
