chore: add ngxs

--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "@angular/platform-server": "^18.2.11",
     "@angular/router": "^18.2.11",
     "@angular/ssr": "^18.2.11",
+    "@ngxs/devtools-plugin": "18.1.4",
+    "@ngxs/form-plugin": "18.1.4",
+    "@ngxs/hmr-plugin": "18.1.4",
+    "@ngxs/logger-plugin": "18.1.4",
+    "@ngxs/router-plugin": "18.1.4",
+    "@ngxs/storage-plugin": "18.1.4",
+    "@ngxs/websocket-plugin": "18.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,6 +47,7 @@
     "@angular-eslint/template-parser": "18.4.0",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.11",
+    "@ngxs/store": "^18.1.4",
     "@nx/angular": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@schematics/angular": "^18.2.11",
