--- a/project.json
+++ b/project.json
@@ -57,7 +57,13 @@
           "extractLicenses": false,
           "sourceMap": false,
           "outputHashing": "none",
-          "namedChunks": false
+          "namedChunks": false,
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
