--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marie-cecile-artiste-peintre",
+  "name": "kuchengeschmack.github.io",
   "version": "0.1.1",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
-    "serve:ssr:marie-cecile-artiste-peintre": "node dist/marie-cecile-artiste-peintre/server/server.mjs",
+    "serve:ssr:kuchengeschmack.github.io": "node dist/kuchengeschmack.github.io/server/server.mjs",
     "lint": "nx lint"
   },
   "private": true,
