--- a/package.json
+++ b/package.json
@@ -71,5 +71,9 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:Kuchengeschmack/kuchengeschmack.github.io.git",
+  "author": "Dorian Réale--Caron <drealecaron@protonmail.com>",
+  "license": "MIT"
 }
