doc(extensions.json): add recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,16 @@
 {
   "recommendations": [
+    "johnpapa.angular-essentials",
     "angular.ng-template",
+    "johnpapa.angular2",
+    "ms-azuretools.vscode-docker",
+    "dbaeumer.vscode-eslint",
+    "ecmel.vscode-html-css",
+    "davidanson.vscode-markdownlint",
+    "pkief.material-icon-theme",
+    "christian-kohler.npm-intellisense",
     "nrwl.angular-console",
-    "dbaeumer.vscode-eslint"
+    "esbenp.prettier-vscode",
+    "sibiraj-s.vscode-scss-formatter"
   ]
 }
