chore(package.json): update scripts

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "nx serve",
-    "release:version": "nx release version",
-    "release:changelog": "nx release changelog",
+    "version": "nx release version",
+    "changelog": "nx release changelog",
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
-    "serve:ssr:kuchengeschmack.github.io": "node dist/kuchengeschmack.github.io/server/server.mjs",
+    "serve:ssr": "node dist/kuchengeschmack.github.io/server/server.mjs",
     "lint": "nx lint"
   },
   "private": true,
