--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "kuchengeschmack.github.io",
   "version": "0.4.2",
+  "private": true,
+  "main": "index.js",
+  "repository": "git@github.com:Kuchengeschmack/kuchengeschmack.github.io.git",
+  "author": "Dorian Réale--Caron <drealecaron@protonmail.com>",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "nx serve",
@@ -12,7 +17,6 @@
     "serve:ssr": "node dist/kuchengeschmack.github.io/server/server.mjs",
     "lint": "nx lint"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.11",
     "@angular/cdk": "^18.2.12",
@@ -73,9 +77,5 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
-  },
-  "main": "index.js",
-  "repository": "git@github.com:Kuchengeschmack/kuchengeschmack.github.io.git",
-  "author": "Dorian Réale--Caron <drealecaron@protonmail.com>",
-  "license": "MIT"
+  }
 }
