--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@nx/angular": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@schematics/angular": "^18.2.11",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.9.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
