--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "kuchengeschmack.github.io",
+  "name": "artiste-peintre",
   "version": "0.5.2",
   "private": true,
   "main": "index.js",
-  "repository": "git@github.com:Kuchengeschmack/kuchengeschmack.github.io.git",
+  "repository": "git@github.com:Kuchengeschmack/artiste-peintre.git",
   "author": "Dorian Réale--Caron <drealecaron@protonmail.com>",
   "license": "MIT",
   "scripts": {
@@ -14,7 +14,7 @@
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
-    "serve:ssr": "node dist/kuchengeschmack.github.io/server/server.mjs",
+    "serve:ssr": "node dist/artiste-peintre/server/server.mjs",
     "lint": "nx lint",
     "deploy": "nx deploy"
   },
