--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/nx/schemas/project-schema.json",
-  "name": "kuchengeschmack.github.io",
+  "name": "artiste-peintre",
   "projectType": "application",
   "generators": {
     "@schematics/angular:component": {
@@ -13,7 +13,7 @@
     "build": {
       "executor": "@angular-devkit/build-angular:application",
       "options": {
-        "outputPath": "dist/kuchengeschmack.github.io",
+        "outputPath": "dist/artiste-peintre",
         "index": "src/index.html",
         "browser": "src/main.ts",
         "polyfills": [
@@ -72,10 +72,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "kuchengeschmack.github.io:build:production"
+          "buildTarget": "artiste-peintre:build:production"
         },
         "development": {
-          "buildTarget": "kuchengeschmack.github.io:build:development"
+          "buildTarget": "artiste-peintre:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -83,7 +83,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "kuchengeschmack.github.io:build"
+        "buildTarget": "artiste-peintre:build"
       }
     },
     "test": {
