--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
     "serve:ssr": "node dist/artiste-peintre/server/server.mjs",
-    "lint": "nx lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "deploy": "nx deploy"
   },
   "dependencies": {
@@ -40,13 +41,9 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular-devkit/core": "^18.2.12",
     "@angular-devkit/schematics": "^18.2.12",
-    "@angular-eslint/builder": "18.4.0",
-    "@angular-eslint/eslint-plugin": "18.4.0",
-    "@angular-eslint/eslint-plugin-template": "18.4.0",
-    "@angular-eslint/schematics": "18.4.0",
-    "@angular-eslint/template-parser": "18.4.0",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
+    "@antfu/eslint-config": "^3.9.2",
     "@nx/angular": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@schematics/angular": "^18.2.12",
@@ -55,13 +52,7 @@
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^18.19.64",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint": "^9.15.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -70,7 +61,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "nx": "20.0.12",
     "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
   }
 }
