--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,10 +2,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
     "types": [
       "node"
-    ]
+    ],
+    "outDir": "./out-tsc/app"
   },
   "files": [
     "src/main.ts",
