--- a/project.json
+++ b/project.json
@@ -16,20 +16,14 @@
         "outputPath": "dist/artiste-peintre",
         "index": "src/index.html",
         "browser": "src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "src/favicon.ico",
-          "src/assets"
-        ],
+        "assets": ["src/favicon.ico", "src/assets"],
         "styles": [
           "@angular/material/prebuilt-themes/indigo-pink.css",
           "src/styles.scss"
         ],
-        "scripts": [],
         "server": "src/main.server.ts",
         "prerender": true,
         "ssr": {
@@ -80,46 +74,18 @@
       },
       "defaultConfiguration": "development"
     },
-    "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
-      "options": {
-        "buildTarget": "artiste-peintre:build"
-      }
-    },
     "test": {
       "executor": "@angular-devkit/build-angular:karma",
       "options": {
-        "polyfills": [
-          "zone.js",
-          "zone.js/testing"
-        ],
+        "polyfills": ["zone.js", "zone.js/testing"],
         "tsConfig": "tsconfig.spec.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "src/favicon.ico",
-          "src/assets"
-        ],
+        "assets": ["src/favicon.ico", "src/assets"],
         "styles": [
           "@angular/material/prebuilt-themes/indigo-pink.css",
           "src/styles.scss"
-        ],
-        "scripts": []
-      }
-    },
-    "lint": {
-      "executor": "@angular-eslint/builder:lint",
-      "options": {
-        "lintFilePatterns": [
-          "src/**/*.ts",
-          "src/**/*.html"
         ]
-      },
-      "outputs": [
-        "{options.outputFile}"
-      ]
-    },
-    "deploy": {
-      "executor": "angular-cli-ghpages:deploy"
+      }
     }
   }
 }
