--- a/package.json
+++ b/package.json
@@ -56,15 +56,16 @@
     "lint-staged": "^15.2.10",
     "nx": "20.0.12",
     "prettier": "^3.3.3",
-    "simple-git-hooks": "^2.11.1",
     "typescript": "~5.5.4"
   },
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,ts,json}": [
-      "eslint . --fix"
+      "eslint --fix"
     ]
   }
 }
