chore: conf prettier and eslint

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,13 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": [
-      "jasmine"
-    ],
+    "types": ["jasmine"],
     "outDir": "./out-tsc/spec"
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
