--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "release": "nx release --skip-publish",
     "build": "nx build",
     "test": "nx test",
-    "lint": "eslint . --fix"
+    "lint": "eslint --fix",
+    "format": "prettier --cache --write"
   },
   "dependencies": {
     "@angular/animations": "^18.2.12",
@@ -64,8 +65,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,json}": [
-      "eslint --fix"
-    ]
+    "*.{js,ts,scss,html,json}": "pnpm format",
+    "*.{js,ts,json}": "pnpm lint"
   }
 }
