chore: extensions.json

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
+  "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
+  "embeddedLanguageFormatting": "off",
   "singleQuote": true,
   "semi": true,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "trailingComma": "es5",
-  "bracketSameLine": true,
-  "printWidth": 80
+  "quoteProps": "preserve",
+  "bracketSpacing": false,
+  "trailingComma": "all"
 }
