--- a/project.json
+++ b/project.json
@@ -20,10 +20,7 @@
         "tsConfig": "tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["src/favicon.ico", "src/assets"],
-        "styles": [
-          "@angular/material/prebuilt-themes/indigo-pink.css",
-          "src/styles.scss"
-        ],
+        "styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
         "server": "src/main.server.ts",
         "prerender": true,
         "ssr": {
@@ -81,10 +78,7 @@
         "tsConfig": "tsconfig.spec.json",
         "inlineStyleLanguage": "scss",
         "assets": ["src/favicon.ico", "src/assets"],
-        "styles": [
-          "@angular/material/prebuilt-themes/indigo-pink.css",
-          "src/styles.scss"
-        ]
+        "styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"]
       }
     }
   }
