--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "git@github.com:Kuchengeschmack/artiste-peintre.git",
   "main": "index.js",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx serve --host=0.0.0.0",
     "release": "nx release --skip-publish",
     "build": "nx build",
     "test": "nx test",
