--- a/project.json
+++ b/project.json
@@ -21,7 +21,7 @@
         "inlineStyleLanguage": "scss",
         "assets": ["src/favicon.ico", "src/assets"],
         "styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
-        "server": "src/main.server.ts",
+        "server": "src/main-server.ts",
         "prerender": true,
         "ssr": {
           "entry": "server.ts"
@@ -52,7 +52,7 @@
           "fileReplacements": [
             {
               "replace": "src/environments/environment.ts",
-              "with": "src/environments/environment.development.ts"
+              "with": "src/environments/environment-development.ts"
             }
           ]
         }
