--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,6 @@
     "types": ["node"],
     "outDir": "./out-tsc/app"
   },
-  "files": ["src/main.ts", "src/main.server.ts", "server.ts"],
+  "files": ["src/main.ts", "src/main-server.ts", "server.ts"],
   "include": ["src/**/*.d.ts"]
 }
