--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [main, chore/**, feature/**, fix/**, refactor/**]
+    tags: [v[0-9].[0-9].[0-9]]
 jobs:
   build:
     runs-on: ubuntu-latest
