--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@angular/compiler-cli": "19.0.0",
     "@antfu/eslint-config": "^3.11.2",
     "@nx/angular": "20.1.3",
+    "@nx/js": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@schematics/angular": "^18.2.12",
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.10.0",
+    "@swc/helpers": "~0.5.11",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.5",
     "@types/node": "^18.19.67",
