--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
+name: artiste-peintre CI
+
 on:
   push:
+    branches: [main, chore/**, feature/**, fix/**, refactor/**]
     tags: ['v[0-9]+.[0-9]+.[0-9]+']
 jobs:
   build:
