--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/jasmine": "~5.1.5",
     "@types/node": "^18.19.67",
     "eslint": "^9.16.0",
+    "http-server": "^14.1.1",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
