--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
     "format": "prettier --cache --write"
   },
   "dependencies": {
-    "@angular/animations": "19.0.0",
-    "@angular/cdk": "19.0.0",
-    "@angular/common": "19.0.0",
-    "@angular/compiler": "19.0.0",
-    "@angular/core": "19.0.0",
-    "@angular/forms": "19.0.0",
-    "@angular/material": "19.0.0",
-    "@angular/platform-browser": "19.0.0",
-    "@angular/platform-browser-dynamic": "19.0.0",
-    "@angular/platform-server": "19.0.0",
-    "@angular/router": "19.0.0",
-    "@angular/ssr": "19.0.1",
+    "@angular/animations": "^19.0.3",
+    "@angular/cdk": "^19.0.2",
+    "@angular/common": "^19.0.3",
+    "@angular/compiler": "^19.0.3",
+    "@angular/core": "^19.0.3",
+    "@angular/forms": "^19.0.3",
+    "@angular/material": "^19.0.2",
+    "@angular/platform-browser": "^19.0.3",
+    "@angular/platform-browser-dynamic": "^19.0.3",
+    "@angular/platform-server": "^19.0.3",
+    "@angular/router": "^19.0.3",
+    "@angular/ssr": "^19.0.4",
     "express": "^4.21.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.1",
-    "@angular-devkit/core": "19.0.1",
-    "@angular-devkit/schematics": "19.0.1",
-    "@angular/cli": "19.0.1",
-    "@angular/compiler-cli": "19.0.0",
+    "@angular-devkit/build-angular": "^19.0.4",
+    "@angular-devkit/core": "^19.0.4",
+    "@angular-devkit/schematics": "^19.0.4",
+    "@angular/cli": "^19.0.4",
+    "@angular/compiler-cli": "^19.0.3",
     "@antfu/eslint-config": "^3.11.2",
-    "@nx/angular": "20.1.3",
-    "@nx/js": "20.0.12",
-    "@nx/workspace": "20.0.12",
+    "@nx/angular": "^20.2.1",
+    "@nx/js": "^20.2.1",
+    "@nx/workspace": "^20.2.1",
     "@schematics/angular": "^18.2.12",
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.10.0",
-    "@swc/helpers": "~0.5.11",
+    "@swc/helpers": "~0.5.15",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.5",
     "@types/node": "^18.19.67",
@@ -59,7 +59,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.2.10",
-    "nx": "20.0.12",
+    "nx": "^20.2.1",
     "prettier": "^3.4.2",
     "typescript": "~5.5.4"
   },
