--- a/project.json
+++ b/project.json
@@ -30,10 +30,10 @@
           "src/styles.scss"
         ],
         "server": "src/main-server.ts",
-        "prerender": true,
-        "ssr": {
-          "entry": "server.ts"
-        }
+        "prerender": {
+          "discoverRoutes": false
+        },
+        "ssr": false
       },
       "configurations": {
         "production": {
