--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nx serve --host=0.0.0.0",
     "release": "nx release --skip-publish",
     "build": "nx build",
-    "test": "nx test",
+    "test": "jest",
     "lint": "eslint --fix",
     "format": "prettier --cache --write"
   },
@@ -40,6 +40,7 @@
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.3",
     "@antfu/eslint-config": "^3.11.2",
+    "@jest/globals": "^29.7.0",
     "@nx/angular": "^20.2.1",
     "@nx/js": "^20.2.1",
     "@nx/workspace": "^20.2.1",
@@ -48,19 +49,14 @@
     "@swc/core": "^1.10.1",
     "@swc/helpers": "~0.5.15",
     "@types/express": "^4.17.21",
-    "@types/jasmine": "~5.1.5",
     "@types/node": "^18.19.67",
     "eslint": "^9.16.0",
     "http-server": "^14.1.1",
-    "jasmine-core": "~5.1.2",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "nx": "^20.2.1",
     "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.5.4"
   },
   "husky": {
