--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "eslint": "^9.16.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.11",
     "nx": "^20.2.2",
