--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "release": "nx release --skip-publish",
     "build": "nx build",
     "test": "jest",
-    "lint": "eslint --fix",
-    "format": "prettier --cache --write"
+    "prepare": "husky"
   },
   "dependencies": {
     "@angular/common": "^19.0.3",
@@ -45,14 +44,5 @@
     "nx": "^20.2.2",
     "prettier": "^3.4.2",
     "typescript": "~5.6.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,scss,html,json}": "pnpm format",
-    "*.{js,ts,json}": "pnpm lint"
   }
 }
