--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@angular-devkit/build-angular": "^19.0.4",
     "@angular/compiler-cli": "^19.0.3",
     "@antfu/eslint-config": "^3.11.2",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@jest/globals": "^29.7.0",
     "@nx/angular": "^20.2.2",
     "@nx/js": "^20.2.2",
@@ -37,6 +40,7 @@
     "@swc-node/register": "^1.10.9",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
