--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@schematics/angular": "^19.0.4",
     "@swc-node/register": "^1.10.9",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
     "babel-jest": "^29.7.0",
     "eslint": "^9.16.0",
