--- a/project.json
+++ b/project.json
@@ -20,7 +20,7 @@
         "tsConfig": "tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["src/favicon.ico", "src/assets"],
-        "styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+        "styles": ["src/styles.scss"],
         "server": "src/main-server.ts",
         "prerender": {
           "discoverRoutes": false
