--- a/apps/artiste-peintre/tsconfig.app.json
+++ b/apps/artiste-peintre/tsconfig.app.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "types": ["node"],
-    "outDir": "./out-tsc/app"
+    "outDir": "../../out-tsc/app"
   },
   "files": ["src/main.ts", "src/main-server.ts", "server.ts"],
   "include": ["src/**/*.d.ts"]
