--- a/apps/artiste-peintre/tsconfig.json
+++ b/apps/artiste-peintre/tsconfig.json
@@ -1,30 +1,16 @@
 {
-  "compileOnSave": false,
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022", "dom"],
     "useDefineForClassFields": false,
-    "experimentalDecorators": true,
-    "baseUrl": "./src",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "paths": {
-      "assets/*": ["assets/*"],
-      "core/*": ["app/core/*"]
-    },
     "resolveJsonModule": true,
     "strict": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
-    "declaration": false,
-    "importHelpers": true,
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
+    "outDir": "../../dist/out-tsc",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "forceConsistentCasingInFileNames": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
