--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.11.2",
+    "@eslint/js": "~8.57.0",
     "@nx/angular": "^20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
     "@nx/js": "^20.2.2",
     "@swc-node/register": "^1.10.9",
     "@types/express": "^5.0.0",
@@ -36,6 +38,7 @@
     "lint-staged": "^15.2.11",
     "nx": "^20.2.2",
     "prettier": "^3.4.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.18.0"
   }
 }
