--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
   "*.{js,ts,scss,html,json}": "prettier --cache --write",
-  "*.{js,ts,json}": "eslint --fix"
+  "*.{js,ts,scss,html,json,}": "eslint --fix"
 }
