--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": "git@github.com:Kuchengeschmack/artiste-peintre.git",
   "scripts": {
-    "start": "nx serve --host=0.0.0.0",
+    "start": "nx serve",
     "release": "nx release --skip-publish",
     "build": "nx build",
     "prepare": "husky"
