--- a/apps/artiste-peintre-front/project.json
+++ b/apps/artiste-peintre-front/project.json
@@ -68,6 +68,22 @@
         }
       },
       "defaultConfiguration": "development"
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/artiste-peintre-front/jest.config.ts"
+      }
+    },
+    "serve-static": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "artiste-peintre-front:build",
+        "port": 4200,
+        "staticFilePath": "dist/apps/artiste-peintre-front/browser",
+        "spa": true
+      }
     }
   }
 }
