--- a/package.json
+++ b/package.json
@@ -10,30 +10,38 @@
     "start": "nx serve",
     "release": "nx release --skip-publish",
     "build": "nx build",
+    "test": "nx test",
+    "serve-static": "nx serve-static",
     "prepare": "husky"
   },
   "dependencies": {
-    "@angular/common": "^19.0.3",
-    "@angular/core": "^19.0.3",
-    "@angular/platform-browser": "^19.0.3",
-    "@angular/platform-server": "^19.0.3",
-    "@angular/router": "^19.0.3",
-    "@angular/ssr": "^19.0.4",
+    "@angular/common": "19.0.3",
+    "@angular/core": "19.0.3",
+    "@angular/platform-browser": "19.0.3",
+    "@angular/platform-server": "19.0.3",
+    "@angular/router": "19.0.3",
+    "@angular/ssr": "19.0.4",
     "express": "^4.21.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@eslint/js": "~8.57.1",
+    "@angular-devkit/build-angular": "19.0.3",
+    "@eslint/js": "^9.17.0",
     "@nx/angular": "^20.2.2",
+    "@nx/eslint": "20.2.2",
     "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
     "@nx/js": "^20.2.2",
+    "@nx/web": "20.2.2",
     "@swc-node/register": "^1.10.9",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
-    "eslint": "^9.16.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "eslint": "^9.17.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "~14.4.2",
     "lint-staged": "^15.2.11",
     "nx": "^20.2.2",
     "prettier": "^3.4.2",
