--- a/apps/artiste-peintre-front/tsconfig.app.json
+++ b/apps/artiste-peintre-front/tsconfig.app.json
@@ -1,10 +1,10 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["node"],
-    "outDir": "../../out-tsc/app"
+    "outDir": "../../dist/out-tsc",
+    "types": ["node"]
   },
-  "files": ["src/main.ts", "src/main-server.ts", "server.ts"],
-  "include": ["src/**/*.d.ts"]
+  "files": ["src/main.ts", "src/main-server.ts", "src/server.ts"],
+  "include": ["src/**/*.d.ts"],
+  "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
