--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,6 @@ jobs:
         run: |
           pnpm install
           pnpm run build
-          pnpm test
+
+      - name: Test Project
+        run: pnpm test
