--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Project
         run: |
           pnpm install
-          pnpm run build
+          pnpm build
 
       - name: Test Project
         run: pnpm test
