chore: run CI for test branches

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
       - 'feature/**'
       - 'fix/**'
       - 'refactor/**'
+      - 'test/**'
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
