--- a/package.json
+++ b/package.json
@@ -15,37 +15,41 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@angular/common": "19.0.3",
-    "@angular/core": "19.0.3",
-    "@angular/platform-browser": "19.0.3",
-    "@angular/platform-server": "19.0.3",
-    "@angular/router": "19.0.3",
-    "@angular/ssr": "19.0.4",
+    "@angular/animations": "19.1.6",
+    "@angular/common": "^19.1.6",
+    "@angular/compiler": "19.1.6",
+    "@angular/compiler-cli": "19.1.6",
+    "@angular/core": "^19.1.6",
+    "@angular/platform-browser": "^19.1.6",
+    "@angular/platform-browser-dynamic": "19.1.6",
+    "@angular/platform-server": "^19.1.6",
+    "@angular/router": "^19.1.6",
+    "@angular/ssr": "^19.1.7",
     "express": "^4.21.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.3",
-    "@eslint/js": "^9.18.0",
-    "@nx/angular": "^20.3.2",
+    "@angular-devkit/build-angular": "^19.1.7",
+    "@eslint/js": "^9.20.0",
+    "@nx/angular": "^20.4.4",
     "@nx/eslint": "20.2.2",
     "@nx/eslint-plugin": "20.2.2",
     "@nx/jest": "20.2.2",
-    "@nx/js": "^20.3.2",
+    "@nx/js": "^20.4.4",
     "@nx/web": "20.2.2",
     "@swc-node/register": "^1.10.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
-    "eslint": "^9.18.0",
+    "@types/node": "^22.13.4",
+    "eslint": "^9.20.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "~14.4.2",
-    "lint-staged": "^15.4.1",
-    "nx": "^20.3.2",
-    "prettier": "^3.4.2",
+    "lint-staged": "^15.4.3",
+    "nx": "^20.4.4",
+    "prettier": "^3.5.1",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.24.0"
   }
 }
