--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@9.14.2",
-  "author": "Dorian Réale--Caron <drealecaron@protonmail.com>",
+  "author": "Dorian Réale Caron <drealecaron@protonmail.com>",
   "license": "MIT",
   "repository": "git@github.com:Kuchengeschmack/artiste-peintre.git",
   "scripts": {
@@ -16,42 +16,42 @@
   },
   "dependencies": {
     "@angular/animations": "19.1.6",
-    "@angular/common": "^19.1.6",
+    "@angular/common": "19.1.6",
     "@angular/compiler": "19.1.6",
     "@angular/compiler-cli": "19.1.6",
-    "@angular/core": "^19.1.6",
-    "@angular/platform-browser": "^19.1.6",
+    "@angular/core": "19.1.6",
+    "@angular/platform-browser": "19.1.6",
     "@angular/platform-browser-dynamic": "19.1.6",
-    "@angular/platform-server": "^19.1.6",
-    "@angular/router": "^19.1.6",
-    "@angular/ssr": "^19.1.7",
-    "esbuild": "^0.25.0",
-    "express": "^4.21.2",
+    "@angular/platform-server": "19.1.6",
+    "@angular/router": "19.1.6",
+    "@angular/ssr": "19.1.7",
+    "esbuild": "0.25.0",
+    "express": "4.21.2",
     "koa": "2.15.4",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "tslib": "2.8.1",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@eslint/js": "^9.20.0",
-    "@nx/angular": "^20.4.4",
+    "@angular-devkit/build-angular": "19.1.7",
+    "@eslint/js": "9.20.0",
+    "@nx/angular": "20.4.4",
     "@nx/eslint": "20.4.4",
     "@nx/eslint-plugin": "20.4.4",
     "@nx/jest": "20.4.4",
-    "@nx/js": "^20.4.4",
+    "@nx/js": "20.4.4",
     "@nx/web": "20.4.4",
-    "@swc-node/register": "^1.10.9",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.4",
-    "eslint": "^9.20.1",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "~14.5.1",
-    "lint-staged": "^15.4.3",
-    "nx": "^20.4.4",
-    "prettier": "^3.5.1",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "^8.24.0"
+    "@swc-node/register": "1.10.9",
+    "@types/express": "5.0.0",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.13.4",
+    "eslint": "9.20.1",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "jest-preset-angular": "14.5.1",
+    "lint-staged": "15.4.3",
+    "nx": "20.4.4",
+    "prettier": "3.5.1",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.24.0"
   }
 }
