--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "license": "MIT",
   "repository": "git@github.com:Kuchengeschmack/artiste-peintre.git",
   "scripts": {
-    "start": "nx serve",
-    "release": "nx release --skip-publish",
-    "build": "nx build",
-    "test": "nx test",
-    "serve-static": "nx serve-static",
+    "start": "ng serve",
     "prepare": "husky"
   },
   "dependencies": {
@@ -32,25 +28,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.1.7",
-    "@eslint/js": "9.20.0",
-    "@nx/angular": "20.4.4",
-    "@nx/eslint": "20.4.4",
-    "@nx/eslint-plugin": "20.4.4",
-    "@nx/jest": "20.4.4",
-    "@nx/js": "20.4.4",
-    "@nx/web": "20.4.4",
+    "@angular/cli": "^19.1.7",
+    "@eslint/js": "^9.20.0",
     "@swc-node/register": "1.10.9",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.4",
-    "eslint": "9.20.1",
+    "eslint": "^9.20.1",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-preset-angular": "14.5.1",
     "lint-staged": "15.4.3",
-    "nx": "20.4.4",
     "prettier": "3.5.1",
     "typescript": "5.7.3",
-    "typescript-eslint": "8.24.0"
+    "typescript-eslint": "^8.24.0"
   }
 }
