fix(pictures-not-showing): move pictures to public folder

--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "apps/front/public",
+                "output": "/public/"
               }
             ],
             "styles": ["apps/front/src/styles.scss"],
